// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`new test 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Header
    light={true}
  >
    Hello Jest!
  </Header>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <Blueprint3.NavbarGroup
        align="left"
      >
        <Blueprint3.NavbarHeading>
          Dh React Bootstrap
        </Blueprint3.NavbarHeading>
        <Blueprint3.NavbarDivider />
        <NavLink
          activeClassName="active"
          aria-current="page"
          data-id="home"
          exact={true}
          innerRef={[Function]}
          to="/"
        >
          <Blueprint3.Button
            active={true}
            icon="home"
            minimal={true}
            text="Home"
          />
        </NavLink>
        <NavLink
          activeClassName="active"
          aria-current="page"
          data-id="blog"
          exact={true}
          innerRef={[Function]}
          to="/blog"
        >
          <Blueprint3.Button
            active={false}
            icon="document"
            minimal={true}
            text="Blog"
          />
        </NavLink>
      </Blueprint3.NavbarGroup>,
      "className": "header",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "align": "left",
        "children": Array [
          <Blueprint3.NavbarHeading>
            Dh React Bootstrap
          </Blueprint3.NavbarHeading>,
          <Blueprint3.NavbarDivider />,
          <NavLink
            activeClassName="active"
            aria-current="page"
            data-id="home"
            exact={true}
            innerRef={[Function]}
            to="/"
          >
            <Blueprint3.Button
              active={true}
              icon="home"
              minimal={true}
              text="Home"
            />
          </NavLink>,
          <NavLink
            activeClassName="active"
            aria-current="page"
            data-id="blog"
            exact={true}
            innerRef={[Function]}
            to="/blog"
          >
            <Blueprint3.Button
              active={false}
              icon="document"
              minimal={true}
              text="Blog"
            />
          </NavLink>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": "Dh React Bootstrap",
          },
          "ref": null,
          "rendered": "Dh React Bootstrap",
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {},
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "activeClassName": "active",
            "aria-current": "page",
            "children": <Blueprint3.Button
              active={true}
              icon="home"
              minimal={true}
              text="Home"
            />,
            "data-id": "home",
            "exact": true,
            "innerRef": [Function],
            "to": "/",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "active": true,
              "icon": "home",
              "minimal": true,
              "text": "Home",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "activeClassName": "active",
            "aria-current": "page",
            "children": <Blueprint3.Button
              active={false}
              icon="document"
              minimal={true}
              text="Blog"
            />,
            "data-id": "blog",
            "exact": true,
            "innerRef": [Function],
            "to": "/blog",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "active": false,
              "icon": "document",
              "minimal": true,
              "text": "Blog",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
      ],
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <Blueprint3.NavbarGroup
          align="left"
        >
          <Blueprint3.NavbarHeading>
            Dh React Bootstrap
          </Blueprint3.NavbarHeading>
          <Blueprint3.NavbarDivider />
          <NavLink
            activeClassName="active"
            aria-current="page"
            data-id="home"
            exact={true}
            innerRef={[Function]}
            to="/"
          >
            <Blueprint3.Button
              active={true}
              icon="home"
              minimal={true}
              text="Home"
            />
          </NavLink>
          <NavLink
            activeClassName="active"
            aria-current="page"
            data-id="blog"
            exact={true}
            innerRef={[Function]}
            to="/blog"
          >
            <Blueprint3.Button
              active={false}
              icon="document"
              minimal={true}
              text="Blog"
            />
          </NavLink>
        </Blueprint3.NavbarGroup>,
        "className": "header",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "align": "left",
          "children": Array [
            <Blueprint3.NavbarHeading>
              Dh React Bootstrap
            </Blueprint3.NavbarHeading>,
            <Blueprint3.NavbarDivider />,
            <NavLink
              activeClassName="active"
              aria-current="page"
              data-id="home"
              exact={true}
              innerRef={[Function]}
              to="/"
            >
              <Blueprint3.Button
                active={true}
                icon="home"
                minimal={true}
                text="Home"
              />
            </NavLink>,
            <NavLink
              activeClassName="active"
              aria-current="page"
              data-id="blog"
              exact={true}
              innerRef={[Function]}
              to="/blog"
            >
              <Blueprint3.Button
                active={false}
                icon="document"
                minimal={true}
                text="Blog"
              />
            </NavLink>,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": "Dh React Bootstrap",
            },
            "ref": null,
            "rendered": "Dh React Bootstrap",
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {},
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "activeClassName": "active",
              "aria-current": "page",
              "children": <Blueprint3.Button
                active={true}
                icon="home"
                minimal={true}
                text="Home"
              />,
              "data-id": "home",
              "exact": true,
              "innerRef": [Function],
              "to": "/",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "active": true,
                "icon": "home",
                "minimal": true,
                "text": "Home",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "activeClassName": "active",
              "aria-current": "page",
              "children": <Blueprint3.Button
                active={false}
                icon="document"
                minimal={true}
                text="Blog"
              />,
              "data-id": "blog",
              "exact": true,
              "innerRef": [Function],
              "to": "/blog",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "active": false,
                "icon": "document",
                "minimal": true,
                "text": "Blog",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`render a grayish header 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Header
    light={true}
  >
    Hello Jest!
  </Header>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <Blueprint3.NavbarGroup
        align="left"
      >
        <Blueprint3.NavbarHeading>
          Dh React Bootstrap
        </Blueprint3.NavbarHeading>
        <Blueprint3.NavbarDivider />
        <NavLink
          activeClassName="active"
          aria-current="page"
          data-id="home"
          exact={true}
          innerRef={[Function]}
          to="/"
        >
          <Blueprint3.Button
            active={true}
            icon="home"
            minimal={true}
            text="Home"
          />
        </NavLink>
        <NavLink
          activeClassName="active"
          aria-current="page"
          data-id="blog"
          exact={true}
          innerRef={[Function]}
          to="/blog"
        >
          <Blueprint3.Button
            active={false}
            icon="document"
            minimal={true}
            text="Blog"
          />
        </NavLink>
      </Blueprint3.NavbarGroup>,
      "className": "header",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "align": "left",
        "children": Array [
          <Blueprint3.NavbarHeading>
            Dh React Bootstrap
          </Blueprint3.NavbarHeading>,
          <Blueprint3.NavbarDivider />,
          <NavLink
            activeClassName="active"
            aria-current="page"
            data-id="home"
            exact={true}
            innerRef={[Function]}
            to="/"
          >
            <Blueprint3.Button
              active={true}
              icon="home"
              minimal={true}
              text="Home"
            />
          </NavLink>,
          <NavLink
            activeClassName="active"
            aria-current="page"
            data-id="blog"
            exact={true}
            innerRef={[Function]}
            to="/blog"
          >
            <Blueprint3.Button
              active={false}
              icon="document"
              minimal={true}
              text="Blog"
            />
          </NavLink>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": "Dh React Bootstrap",
          },
          "ref": null,
          "rendered": "Dh React Bootstrap",
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {},
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "activeClassName": "active",
            "aria-current": "page",
            "children": <Blueprint3.Button
              active={true}
              icon="home"
              minimal={true}
              text="Home"
            />,
            "data-id": "home",
            "exact": true,
            "innerRef": [Function],
            "to": "/",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "active": true,
              "icon": "home",
              "minimal": true,
              "text": "Home",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "activeClassName": "active",
            "aria-current": "page",
            "children": <Blueprint3.Button
              active={false}
              icon="document"
              minimal={true}
              text="Blog"
            />,
            "data-id": "blog",
            "exact": true,
            "innerRef": [Function],
            "to": "/blog",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "active": false,
              "icon": "document",
              "minimal": true,
              "text": "Blog",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
      ],
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <Blueprint3.NavbarGroup
          align="left"
        >
          <Blueprint3.NavbarHeading>
            Dh React Bootstrap
          </Blueprint3.NavbarHeading>
          <Blueprint3.NavbarDivider />
          <NavLink
            activeClassName="active"
            aria-current="page"
            data-id="home"
            exact={true}
            innerRef={[Function]}
            to="/"
          >
            <Blueprint3.Button
              active={true}
              icon="home"
              minimal={true}
              text="Home"
            />
          </NavLink>
          <NavLink
            activeClassName="active"
            aria-current="page"
            data-id="blog"
            exact={true}
            innerRef={[Function]}
            to="/blog"
          >
            <Blueprint3.Button
              active={false}
              icon="document"
              minimal={true}
              text="Blog"
            />
          </NavLink>
        </Blueprint3.NavbarGroup>,
        "className": "header",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "align": "left",
          "children": Array [
            <Blueprint3.NavbarHeading>
              Dh React Bootstrap
            </Blueprint3.NavbarHeading>,
            <Blueprint3.NavbarDivider />,
            <NavLink
              activeClassName="active"
              aria-current="page"
              data-id="home"
              exact={true}
              innerRef={[Function]}
              to="/"
            >
              <Blueprint3.Button
                active={true}
                icon="home"
                minimal={true}
                text="Home"
              />
            </NavLink>,
            <NavLink
              activeClassName="active"
              aria-current="page"
              data-id="blog"
              exact={true}
              innerRef={[Function]}
              to="/blog"
            >
              <Blueprint3.Button
                active={false}
                icon="document"
                minimal={true}
                text="Blog"
              />
            </NavLink>,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": "Dh React Bootstrap",
            },
            "ref": null,
            "rendered": "Dh React Bootstrap",
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {},
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "activeClassName": "active",
              "aria-current": "page",
              "children": <Blueprint3.Button
                active={true}
                icon="home"
                minimal={true}
                text="Home"
              />,
              "data-id": "home",
              "exact": true,
              "innerRef": [Function],
              "to": "/",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "active": true,
                "icon": "home",
                "minimal": true,
                "text": "Home",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "activeClassName": "active",
              "aria-current": "page",
              "children": <Blueprint3.Button
                active={false}
                icon="document"
                minimal={true}
                text="Blog"
              />,
              "data-id": "blog",
              "exact": true,
              "innerRef": [Function],
              "to": "/blog",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "active": false,
                "icon": "document",
                "minimal": true,
                "text": "Blog",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`render a header 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Header>
    Hello Jest!
  </Header>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <Blueprint3.NavbarGroup
        align="left"
      >
        <Blueprint3.NavbarHeading>
          Dh React Bootstrap
        </Blueprint3.NavbarHeading>
        <Blueprint3.NavbarDivider />
        <NavLink
          activeClassName="active"
          aria-current="page"
          data-id="home"
          exact={true}
          innerRef={[Function]}
          to="/"
        >
          <Blueprint3.Button
            active={true}
            icon="home"
            minimal={true}
            text="Home"
          />
        </NavLink>
        <NavLink
          activeClassName="active"
          aria-current="page"
          data-id="blog"
          exact={true}
          innerRef={[Function]}
          to="/blog"
        >
          <Blueprint3.Button
            active={false}
            icon="document"
            minimal={true}
            text="Blog"
          />
        </NavLink>
      </Blueprint3.NavbarGroup>,
      "className": "header",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "align": "left",
        "children": Array [
          <Blueprint3.NavbarHeading>
            Dh React Bootstrap
          </Blueprint3.NavbarHeading>,
          <Blueprint3.NavbarDivider />,
          <NavLink
            activeClassName="active"
            aria-current="page"
            data-id="home"
            exact={true}
            innerRef={[Function]}
            to="/"
          >
            <Blueprint3.Button
              active={true}
              icon="home"
              minimal={true}
              text="Home"
            />
          </NavLink>,
          <NavLink
            activeClassName="active"
            aria-current="page"
            data-id="blog"
            exact={true}
            innerRef={[Function]}
            to="/blog"
          >
            <Blueprint3.Button
              active={false}
              icon="document"
              minimal={true}
              text="Blog"
            />
          </NavLink>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": "Dh React Bootstrap",
          },
          "ref": null,
          "rendered": "Dh React Bootstrap",
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {},
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "activeClassName": "active",
            "aria-current": "page",
            "children": <Blueprint3.Button
              active={true}
              icon="home"
              minimal={true}
              text="Home"
            />,
            "data-id": "home",
            "exact": true,
            "innerRef": [Function],
            "to": "/",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "active": true,
              "icon": "home",
              "minimal": true,
              "text": "Home",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "activeClassName": "active",
            "aria-current": "page",
            "children": <Blueprint3.Button
              active={false}
              icon="document"
              minimal={true}
              text="Blog"
            />,
            "data-id": "blog",
            "exact": true,
            "innerRef": [Function],
            "to": "/blog",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "active": false,
              "icon": "document",
              "minimal": true,
              "text": "Blog",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
      ],
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <Blueprint3.NavbarGroup
          align="left"
        >
          <Blueprint3.NavbarHeading>
            Dh React Bootstrap
          </Blueprint3.NavbarHeading>
          <Blueprint3.NavbarDivider />
          <NavLink
            activeClassName="active"
            aria-current="page"
            data-id="home"
            exact={true}
            innerRef={[Function]}
            to="/"
          >
            <Blueprint3.Button
              active={true}
              icon="home"
              minimal={true}
              text="Home"
            />
          </NavLink>
          <NavLink
            activeClassName="active"
            aria-current="page"
            data-id="blog"
            exact={true}
            innerRef={[Function]}
            to="/blog"
          >
            <Blueprint3.Button
              active={false}
              icon="document"
              minimal={true}
              text="Blog"
            />
          </NavLink>
        </Blueprint3.NavbarGroup>,
        "className": "header",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "align": "left",
          "children": Array [
            <Blueprint3.NavbarHeading>
              Dh React Bootstrap
            </Blueprint3.NavbarHeading>,
            <Blueprint3.NavbarDivider />,
            <NavLink
              activeClassName="active"
              aria-current="page"
              data-id="home"
              exact={true}
              innerRef={[Function]}
              to="/"
            >
              <Blueprint3.Button
                active={true}
                icon="home"
                minimal={true}
                text="Home"
              />
            </NavLink>,
            <NavLink
              activeClassName="active"
              aria-current="page"
              data-id="blog"
              exact={true}
              innerRef={[Function]}
              to="/blog"
            >
              <Blueprint3.Button
                active={false}
                icon="document"
                minimal={true}
                text="Blog"
              />
            </NavLink>,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": "Dh React Bootstrap",
            },
            "ref": null,
            "rendered": "Dh React Bootstrap",
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {},
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "activeClassName": "active",
              "aria-current": "page",
              "children": <Blueprint3.Button
                active={true}
                icon="home"
                minimal={true}
                text="Home"
              />,
              "data-id": "home",
              "exact": true,
              "innerRef": [Function],
              "to": "/",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "active": true,
                "icon": "home",
                "minimal": true,
                "text": "Home",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "activeClassName": "active",
              "aria-current": "page",
              "children": <Blueprint3.Button
                active={false}
                icon="document"
                minimal={true}
                text="Blog"
              />,
              "data-id": "blog",
              "exact": true,
              "innerRef": [Function],
              "to": "/blog",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "active": false,
                "icon": "document",
                "minimal": true,
                "text": "Blog",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`render a small header 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Header
    small={true}
  >
    Hello Jest!
  </Header>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <Blueprint3.NavbarGroup
        align="left"
      >
        <Blueprint3.NavbarHeading>
          Dh React Bootstrap
        </Blueprint3.NavbarHeading>
        <Blueprint3.NavbarDivider />
        <NavLink
          activeClassName="active"
          aria-current="page"
          data-id="home"
          exact={true}
          innerRef={[Function]}
          to="/"
        >
          <Blueprint3.Button
            active={true}
            icon="home"
            minimal={true}
            text="Home"
          />
        </NavLink>
        <NavLink
          activeClassName="active"
          aria-current="page"
          data-id="blog"
          exact={true}
          innerRef={[Function]}
          to="/blog"
        >
          <Blueprint3.Button
            active={false}
            icon="document"
            minimal={true}
            text="Blog"
          />
        </NavLink>
      </Blueprint3.NavbarGroup>,
      "className": "header",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "align": "left",
        "children": Array [
          <Blueprint3.NavbarHeading>
            Dh React Bootstrap
          </Blueprint3.NavbarHeading>,
          <Blueprint3.NavbarDivider />,
          <NavLink
            activeClassName="active"
            aria-current="page"
            data-id="home"
            exact={true}
            innerRef={[Function]}
            to="/"
          >
            <Blueprint3.Button
              active={true}
              icon="home"
              minimal={true}
              text="Home"
            />
          </NavLink>,
          <NavLink
            activeClassName="active"
            aria-current="page"
            data-id="blog"
            exact={true}
            innerRef={[Function]}
            to="/blog"
          >
            <Blueprint3.Button
              active={false}
              icon="document"
              minimal={true}
              text="Blog"
            />
          </NavLink>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": "Dh React Bootstrap",
          },
          "ref": null,
          "rendered": "Dh React Bootstrap",
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {},
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "activeClassName": "active",
            "aria-current": "page",
            "children": <Blueprint3.Button
              active={true}
              icon="home"
              minimal={true}
              text="Home"
            />,
            "data-id": "home",
            "exact": true,
            "innerRef": [Function],
            "to": "/",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "active": true,
              "icon": "home",
              "minimal": true,
              "text": "Home",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "activeClassName": "active",
            "aria-current": "page",
            "children": <Blueprint3.Button
              active={false}
              icon="document"
              minimal={true}
              text="Blog"
            />,
            "data-id": "blog",
            "exact": true,
            "innerRef": [Function],
            "to": "/blog",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "active": false,
              "icon": "document",
              "minimal": true,
              "text": "Blog",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
      ],
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <Blueprint3.NavbarGroup
          align="left"
        >
          <Blueprint3.NavbarHeading>
            Dh React Bootstrap
          </Blueprint3.NavbarHeading>
          <Blueprint3.NavbarDivider />
          <NavLink
            activeClassName="active"
            aria-current="page"
            data-id="home"
            exact={true}
            innerRef={[Function]}
            to="/"
          >
            <Blueprint3.Button
              active={true}
              icon="home"
              minimal={true}
              text="Home"
            />
          </NavLink>
          <NavLink
            activeClassName="active"
            aria-current="page"
            data-id="blog"
            exact={true}
            innerRef={[Function]}
            to="/blog"
          >
            <Blueprint3.Button
              active={false}
              icon="document"
              minimal={true}
              text="Blog"
            />
          </NavLink>
        </Blueprint3.NavbarGroup>,
        "className": "header",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "align": "left",
          "children": Array [
            <Blueprint3.NavbarHeading>
              Dh React Bootstrap
            </Blueprint3.NavbarHeading>,
            <Blueprint3.NavbarDivider />,
            <NavLink
              activeClassName="active"
              aria-current="page"
              data-id="home"
              exact={true}
              innerRef={[Function]}
              to="/"
            >
              <Blueprint3.Button
                active={true}
                icon="home"
                minimal={true}
                text="Home"
              />
            </NavLink>,
            <NavLink
              activeClassName="active"
              aria-current="page"
              data-id="blog"
              exact={true}
              innerRef={[Function]}
              to="/blog"
            >
              <Blueprint3.Button
                active={false}
                icon="document"
                minimal={true}
                text="Blog"
              />
            </NavLink>,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": "Dh React Bootstrap",
            },
            "ref": null,
            "rendered": "Dh React Bootstrap",
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {},
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "activeClassName": "active",
              "aria-current": "page",
              "children": <Blueprint3.Button
                active={true}
                icon="home"
                minimal={true}
                text="Home"
              />,
              "data-id": "home",
              "exact": true,
              "innerRef": [Function],
              "to": "/",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "active": true,
                "icon": "home",
                "minimal": true,
                "text": "Home",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "activeClassName": "active",
              "aria-current": "page",
              "children": <Blueprint3.Button
                active={false}
                icon="document"
                minimal={true}
                text="Blog"
              />,
              "data-id": "blog",
              "exact": true,
              "innerRef": [Function],
              "to": "/blog",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "active": false,
                "icon": "document",
                "minimal": true,
                "text": "Blog",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`render a small header2 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Header
    small={true}
  >
    Hello Jest!
  </Header>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <Blueprint3.NavbarGroup
        align="left"
      >
        <Blueprint3.NavbarHeading>
          Dh React Bootstrap
        </Blueprint3.NavbarHeading>
        <Blueprint3.NavbarDivider />
        <NavLink
          activeClassName="active"
          aria-current="page"
          data-id="home"
          exact={true}
          innerRef={[Function]}
          to="/"
        >
          <Blueprint3.Button
            active={true}
            icon="home"
            minimal={true}
            text="Home"
          />
        </NavLink>
        <NavLink
          activeClassName="active"
          aria-current="page"
          data-id="blog"
          exact={true}
          innerRef={[Function]}
          to="/blog"
        >
          <Blueprint3.Button
            active={false}
            icon="document"
            minimal={true}
            text="Blog"
          />
        </NavLink>
      </Blueprint3.NavbarGroup>,
      "className": "header",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "align": "left",
        "children": Array [
          <Blueprint3.NavbarHeading>
            Dh React Bootstrap
          </Blueprint3.NavbarHeading>,
          <Blueprint3.NavbarDivider />,
          <NavLink
            activeClassName="active"
            aria-current="page"
            data-id="home"
            exact={true}
            innerRef={[Function]}
            to="/"
          >
            <Blueprint3.Button
              active={true}
              icon="home"
              minimal={true}
              text="Home"
            />
          </NavLink>,
          <NavLink
            activeClassName="active"
            aria-current="page"
            data-id="blog"
            exact={true}
            innerRef={[Function]}
            to="/blog"
          >
            <Blueprint3.Button
              active={false}
              icon="document"
              minimal={true}
              text="Blog"
            />
          </NavLink>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": "Dh React Bootstrap",
          },
          "ref": null,
          "rendered": "Dh React Bootstrap",
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {},
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "activeClassName": "active",
            "aria-current": "page",
            "children": <Blueprint3.Button
              active={true}
              icon="home"
              minimal={true}
              text="Home"
            />,
            "data-id": "home",
            "exact": true,
            "innerRef": [Function],
            "to": "/",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "active": true,
              "icon": "home",
              "minimal": true,
              "text": "Home",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "activeClassName": "active",
            "aria-current": "page",
            "children": <Blueprint3.Button
              active={false}
              icon="document"
              minimal={true}
              text="Blog"
            />,
            "data-id": "blog",
            "exact": true,
            "innerRef": [Function],
            "to": "/blog",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "active": false,
              "icon": "document",
              "minimal": true,
              "text": "Blog",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
      ],
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <Blueprint3.NavbarGroup
          align="left"
        >
          <Blueprint3.NavbarHeading>
            Dh React Bootstrap
          </Blueprint3.NavbarHeading>
          <Blueprint3.NavbarDivider />
          <NavLink
            activeClassName="active"
            aria-current="page"
            data-id="home"
            exact={true}
            innerRef={[Function]}
            to="/"
          >
            <Blueprint3.Button
              active={true}
              icon="home"
              minimal={true}
              text="Home"
            />
          </NavLink>
          <NavLink
            activeClassName="active"
            aria-current="page"
            data-id="blog"
            exact={true}
            innerRef={[Function]}
            to="/blog"
          >
            <Blueprint3.Button
              active={false}
              icon="document"
              minimal={true}
              text="Blog"
            />
          </NavLink>
        </Blueprint3.NavbarGroup>,
        "className": "header",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "align": "left",
          "children": Array [
            <Blueprint3.NavbarHeading>
              Dh React Bootstrap
            </Blueprint3.NavbarHeading>,
            <Blueprint3.NavbarDivider />,
            <NavLink
              activeClassName="active"
              aria-current="page"
              data-id="home"
              exact={true}
              innerRef={[Function]}
              to="/"
            >
              <Blueprint3.Button
                active={true}
                icon="home"
                minimal={true}
                text="Home"
              />
            </NavLink>,
            <NavLink
              activeClassName="active"
              aria-current="page"
              data-id="blog"
              exact={true}
              innerRef={[Function]}
              to="/blog"
            >
              <Blueprint3.Button
                active={false}
                icon="document"
                minimal={true}
                text="Blog"
              />
            </NavLink>,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": "Dh React Bootstrap",
            },
            "ref": null,
            "rendered": "Dh React Bootstrap",
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {},
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "activeClassName": "active",
              "aria-current": "page",
              "children": <Blueprint3.Button
                active={true}
                icon="home"
                minimal={true}
                text="Home"
              />,
              "data-id": "home",
              "exact": true,
              "innerRef": [Function],
              "to": "/",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "active": true,
                "icon": "home",
                "minimal": true,
                "text": "Home",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "activeClassName": "active",
              "aria-current": "page",
              "children": <Blueprint3.Button
                active={false}
                icon="document"
                minimal={true}
                text="Blog"
              />,
              "data-id": "blog",
              "exact": true,
              "innerRef": [Function],
              "to": "/blog",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "active": false,
                "icon": "document",
                "minimal": true,
                "text": "Blog",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;
